# markov-chains

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 02iv0axzjcxaz9ypznyrxqz1bcsd3qax-source  c05d1sqfhkl93p3j5ykic68mgg1gsrvb-source  s470928mffr4lj410z3p5zlvj9qp2463-source
src/: chains.rs  dataset.rs  lib.rs  main.rs  messages.rs  ngram.rs  tokenized_messages.rs  tokens.rs
src/cli/: dataset.rs  messages.rs  mod.rs  model.rs  tokens.rs
src/model/: generator.rs  mod.rs  model.rs  params.rs  transitions.rs
